--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "optri",
   "theme": "syntax",
-  "version": "0.0.0",
-  "description": "A short description of your syntax theme",
+  "version": "0.0.1",
+  "description": "tetrdr",
   "keywords": [
-    "syntax",
-    "theme"
+    "ter",
+    "thetrme"
   ],
   "repository": "https://github.com/atom/optri",
   "license": "MIT",
