--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ter",
     "thetrme"
   ],
-  "repository": "https://github.com/atom/optri",
+  "repository": "https://github.com/123goalgoal/optri",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
