--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "optri",
+  "name": "no1",
   "theme": "syntax",
-  "version": "0.1.0",
-  "description": "tetrdr",
+  "version": "0.1.1",
+  "description": ": สูตรบาคาร่า จากเว็บตรง มัดรวบทุกค่ายที่ว่าดังและดี มีกำไรรอให้คุณกอบโกยดั่งสายน้ำ
+รองรับทุกระบบมือถือ ไม่ต้องดาวโหลดให้มากความ
+",
   "keywords": [
-    "ter",
-    "thetrme"
+    "สูตรบาคาร่า",
+    "บาคาร่าทดลอง",
+    "วิธีเล่นบาคาร่า",
+    "บาคาร่าออนไลน์"
   ],
   "repository": "https://github.com/123goalgoal/optri",
   "license": "MIT",
