--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "description": "tetrdr",
   "keywords": [
     "ter",
-    "thetrme"
-    "thetrme"
+    "thetrme",
+    "thetrme",
     "thetrme"
   ],
   "repository": "https://github.com/123goalgoal/optri",
