--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "optri",
+  "name": "test1",
   "theme": "syntax",
-  "version": "0.2.0",
-  "description": "tetrdr",
+  "version": "0.2.1",
+  "description": "แทงบอล เรายกทุกมุมสนามมาไว้ที่หน้าจอคุณ แทงบอลได้สุดชิว พร้อมความมันที่ไม่มีให้พัก",
   "keywords": [
-    "ter",
-    "thetrme",
-    "thetrme",
-    "thetrme"
+    "แทงบอล ออนไลน์",
+    "แทงบอล สเต็ป",
+    "แทงบอล ยังไง",
+    "เว็บพนันบอล ไม่ผ่านเอเย่นต์"
   ],
   "repository": "https://github.com/123goalgoal/optri",
   "license": "MIT",
