--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "แทงบอล ลุ้นทุกนัดซัดกันทุกนาที",
+  "name": "test7",
   "theme": "syntax",
   "version": "0.22.2",
   "description": "แทงบอล เรายกทุกมุมสนามมาไว้ที่หน้าจอคุณ แทงบอลได้สุดชิว พร้อมความมันที่ไม่มีให้พัก",
