--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "test8",
   "theme": "syntax",
   "version": "0.22.3",
-  "description": "แทงบอล เรายกทุกมุมสนามมาไว้ที่หน้าจอคุณ แทงบอลได้สุดชิว พร้อมความมันที่ไม่มีให้พัก",
+  "description": "Sexy Baccarat เป็นอีกหนึ่งค่ายที่ได้รับความนิยมมากในหมู่นักพนัน พร้อมกับบริการของสาวสวยเซ็กซี่กว่า 50 คน ด้วยการสวมใส่ชุดบิกินี่ของสาวๆแสนสวย ที่ยกขบวนความเซ็กซี่กันมา",
   "keywords": [
-    "แทงบอล ออนไลน์",
-    "แทงบอล สเต็ป",
-    "แทงบอล ยังไง",
-    "เว็บพนันบอล ไม่ผ่านเอเย่นต์"
+    "เซ็กซี่บาคาร่า คือ",
+    "สูตรบาคาร่า เซ็กซี่บาคาร่า",
+    "Saบาคาร่า1688",
+    "เว็บพนันออนไลน์ sa"
   ],
   "repository": "https://github.com/123goalgoal/optri",
   "license": "MIT",
