--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "test12",
+  "name": "test13",
   "theme": "syntax",
   "version": "0.31.0",
   "description": "Sexy Baccarat เป็นอีกหนึ่งค่ายที่ได้รับความนิยมมากในหมู่นักพนัน พร้อมกับบริการของสาวสวยเซ็กซี่กว่า 50 คน ด้วยการสวมใส่ชุดบิกินี่ของสาวๆแสนสวย ที่ยกขบวนความเซ็กซี่กันมา",
   "keywords": [
     "เซ็กซี่บาคาร่า คือ",
     "สูตรบาคาร่า เซ็กซี่บาคาร่า",
-    "Saบาคาร่า1688",
-    "เว็บพนันออนไลน์ sa"
+    "Saบาคาร่า1688"
+
   ],
   "repository": "https://github.com/123goalgoal/optri",
   "license": "MIT",
