--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test14",
+  "name": "sexyบาคาร่า ส่งตรงสาวเซ็กซี่สุดๆเปิดไพ่ตลอดวัน",
   "theme": "syntax",
   "version": "0.33.0",
   "description": "Sexy Baccarat เป็นอีกหนึ่งค่ายที่ได้รับความนิยมมากในหมู่นักพนัน พร้อมกับบริการของสาวสวยเซ็กซี่กว่า 50 คน ด้วยการสวมใส่ชุดบิกินี่ของสาวๆแสนสวย ที่ยกขบวนความเซ็กซี่กันมา",
