--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "sexyบาคาร่า ส่งตรงสาวเซ็กซี่สุดๆเปิดไพ่ตลอดวัน",
+  "name": "no7",
   "theme": "syntax",
   "version": "0.33.1",
-  "description": "Sexy Baccarat เป็นอีกหนึ่งค่ายที่ได้รับความนิยมมากในหมู่นักพนัน พร้อมกับบริการของสาวสวยเซ็กซี่กว่า 50 คน ด้วยการสวมใส่ชุดบิกินี่ของสาวๆแสนสวย ที่ยกขบวนความเซ็กซี่กันมา",
+  "description": "เว็บสล็อต ศูนย์กลางการพนันออนไลน์ที่ใหญ่ที่สุดในประเทศโดดเด่นเหนือใครรองรับทุกระบบการเดิมพันได้แบบราบรื่น",
   "keywords": [
-    "เซ็กซี่บาคาร่า คือ",
-    "สูตรบาคาร่า เซ็กซี่บาคาร่า",
-    "Saบาคาร่า1688"
+    "เว็บสล็อต pg",
+    "เว็บสล็อตแตกง่าย",
+    "เว็บสล็อตทดลอง"
   ],
   "repository": "https://github.com/123goalgoal/optri",
   "license": "MIT",
