--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "no7",
+  "name": "เว็บสล็อตเปิดใหม่ไม่มีช็อตฟิลฉีกกฏใหม่ของการเดิมพันแบบเดิมๆ",
   "theme": "syntax",
   "version": "0.34.0",
   "description": "เว็บสล็อต ศูนย์กลางการพนันออนไลน์ที่ใหญ่ที่สุดในประเทศโดดเด่นเหนือใครรองรับทุกระบบการเดิมพันได้แบบราบรื่น",
