--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "เว็บสล็อตเปิดใหม่ไม่มีช็อตฟิลฉีกกฏใหม่ของการเดิมพันแบบเดิมๆ",
+  "name": "jpg",
   "theme": "syntax",
   "version": "0.34.1",
-  "description": "เว็บสล็อต ศูนย์กลางการพนันออนไลน์ที่ใหญ่ที่สุดในประเทศโดดเด่นเหนือใครรองรับทุกระบบการเดิมพันได้แบบราบรื่น",
+  "description": "เทคนิคการแทงบอลสำหรับผู้เล่นใหม่ที่สนใจร่วมเล่นเกมส์พนันบอลมีเทคนิคมากมายที่ฝึกง่ายและเชี่ยวชาญ นี่เป็นเทคนิคที่เพิ่มโอกาสในการชนะเดิมพันมากขึ้น ยังทำให้การพนันฟุตบอลเข้าใจง่ายขึ้นอีกด้วย",
   "keywords": [
-    "เว็บสล็อต pg",
-    "เว็บสล็อตแตกง่าย",
-    "เว็บสล็อตทดลอง"
+    "แทงบอลสเต็ป",
+    "แทงบอล888",
+    "แทงบอล ออนไลน์"
   ],
   "repository": "https://github.com/123goalgoal/optri",
   "license": "MIT",
