--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "jpg",
+  "name": "jpg1",
   "theme": "syntax",
-  "version": "0.34.1",
+  "version": "0.34.5",
   "description": "เทคนิคการแทงบอลสำหรับผู้เล่นใหม่ที่สนใจร่วมเล่นเกมส์พนันบอลมีเทคนิคมากมายที่ฝึกง่ายและเชี่ยวชาญ นี่เป็นเทคนิคที่เพิ่มโอกาสในการชนะเดิมพันมากขึ้น ยังทำให้การพนันฟุตบอลเข้าใจง่ายขึ้นอีกด้วย",
   "keywords": [
     "แทงบอลสเต็ป",
     "แทงบอล888",
-    "แทงบอล ออนไลน์"
+    "แทงบอลออนไลน์"
   ],
   "repository": "https://github.com/123goalgoal/optri",
   "license": "MIT",
