--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "jpg1",
+  "name": "hop56",
   "theme": "syntax",
-  "version": "0.34.5",
-  "description": "เทคนิคการแทงบอลสำหรับผู้เล่นใหม่ที่สนใจร่วมเล่นเกมส์พนันบอลมีเทคนิคมากมายที่ฝึกง่ายและเชี่ยวชาญนี่เป็นเทคนิคที่เพิ่มโอกาสในการชนะเดิมพันมากขึ้นยังทำให้การพนันฟุตบอลเข้าใจง่ายขึ้นอีกด้วย",
+  "version": "0.33.1",
+  "description": "เทคนิคการแทงบอลสำหรับผู้เล่นใหม่ที่สนใจร่วมเล่นเกมส์พนันบอลมีเทคนิคมากมายที่ฝึกง่ายและเชี่ยวชาญ นี่เป็นเทคนิคที่เพิ่มโอกาสในการชนะเดิมพันมากขึ้น ยังทำให้การพนันฟุตบอลเข้าใจง่ายขึ้นอีกด้วย",
   "keywords": [
     "แทงบอลสเต็ป",
     "แทงบอล888",
