--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "hop56",
+  "name": "test14",
   "theme": "syntax",
-  "version": "0.33.2",
-  "description": "เทคนิคการแทงบอลสำหรับผู้เล่นใหม่ที่สนใจร่วมเล่นเกมส์พนันบอลมีเทคนิคมากมายที่ฝึกง่ายและเชี่ยวชาญ",
+  "version": "0.33.0",
+  "description": "Sexy Baccarat เป็นอีกหนึ่งค่ายที่ได้รับความนิยมมากในหมู่นักพนัน พร้อมกับบริการของสาวสวยเซ็กซี่กว่า 50 คน ด้วยการสวมใส่ชุดบิกินี่ของสาวๆแสนสวย ที่ยกขบวนความเซ็กซี่กันมา",
   "keywords": [
-    "แทงบอลสเต็ป",
-    "แทงบอล888",
-    "แทงบอลออนไลน์"
+    "เซ็กซี่บาคาร่า คือ",
+    "สูตรบาคาร่า เซ็กซี่บาคาร่า",
+    "Saบาคาร่า1688"
   ],
   "repository": "https://github.com/123goalgoal/optri",
   "license": "MIT",
