--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "test20",
   "theme": "syntax",
   "version": "0.33.1",
-  "description": "Sexy Baccarat เป็นอีกหนึ่งค่ายที่ได้รับความนิยมมากในหมู่นักพนัน พร้อมกับบริการของสาวสวยเซ็กซี่กว่า 50 คน ด้วยการสวมใส่ชุดบิกินี่ของสาวๆแสนสวย ที่ยกขบวนความเซ็กซี่กันมา",
+  "description": "เทคนิคการแทงบอลสำหรับผู้เล่นใหม่ที่น่นอกจากนี้ยังมีนักพนันหน้าใหม่ที่สนใจในการเล่นเป็นอย่างมาก",
   "keywords": [
-    "เซ็กซี่บาคาร่า คือ",
-    "สูตรบาคาร่า เซ็กซี่บาคาร่า",
-    "Saบาคาร่า1688"
+    "แทงบอล",
+    "แทงบอล888",
+    "แทงบอลออนไลน์"
   ],
   "repository": "https://github.com/123goalgoal/optri",
   "license": "MIT",
