--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test23",
+  "name": "pop1",
   "theme": "syntax",
   "version": "0.37.1",
   "description": "เทคนิคการแทงบอลสำหรับผู้เล่นใหม่ที่น่นอกจากนี้ยังมีนักพนันหน้าใหม่ที่สนใจในการเล่นเป็นอย่างมาก",
