--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pop2",
+  "name": "บาคาร่า ส่งตรงสาวเซ็กซี่สุดๆเปิดไพ่ตลอดวัน",
   "theme": "syntax",
   "version": "0.38.0",
   "description": "เทคนิคการแทงบอลสำหรับผู้เล่นใหม่ที่น่นอกจากนี้ยังมีนักพนันหน้าใหม่ที่สนใจในการเล่นเป็นอย่างมาก",
