--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "บาคาร่า ส่งตรงสาวเซ็กซี่สุดๆเปิดไพ่ตลอดวัน",
+  "name": "pyo01",
   "theme": "syntax",
-  "version": "0.38.1",
-  "description": "เทคนิคการแทงบอลสำหรับผู้เล่นใหม่ที่น่นอกจากนี้ยังมีนักพนันหน้าใหม่ที่สนใจในการเล่นเป็นอย่างมาก",
+  "version": "0.38.2",
+  "description": "ลิงค์รับทรัพย์ ช่องทางสร้างอาชีพเสริม ลงแค่แรงนิ้ว
+ตื่นสายได้เงินง่าย ไม่ต้องลงทุน",
   "keywords": [
-    "แทงบอล",
-    "แทงบอล888",
-    "แทงบอลออนไลน์"
+    "ลิงค์รับทรัพย์",
+    "ลิงค์รับทรัพย์ คือ",
+    "ลิงค์รับทรัพย์ 123"
   ],
   "repository": "https://github.com/123goalgoal/optri",
   "license": "MIT",
